# typing-battles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: index.html  names.js  particles.js  words_bash.txt  words_cpp.txt  words_git.txt
src/: CMakeLists.txt  common.h  main.cpp  room-math.h  room-words.h
